--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.3",
+    "react-typed": "^2.0.12",
     "react-webcam": "^7.2.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
